--- a/r_Rmd/December 2021.Rmd
+++ b/r_Rmd/December 2021.Rmd
@@ -77,8 +77,6 @@ aoc_get_response <- function(day,
 #   read_lines() %>% 
 #   as.numeric()
 
-"53616c7465645f5f65a1b4bf36026da16a91bf924b09b0c001b1f2462bfe0bdd1d99867c86738f077ee3114f99b3beb3"
-
 ```
 
 The [Advent of Code](https://adventofcode.com/) is a daily challenge
@@ -3727,7 +3725,6 @@ x <- input %>%
   mutate(col = row_number()) %>% 
   ungroup()
 
-
 adj <- tibble(xd = c(-1, 1, 0, 0),
               yd = c(0, 0, -1, 1))
 
@@ -3735,12 +3732,11 @@ adjacent <- function(d, d2) {
   d %>% 
     crossing(adj) %>% 
     mutate(row2 = row + xd,
-           col2 = col + yd) %>% view()
+           col2 = col + yd) %>% 
     inner_join(d2, by = c(row2 = "row", col2 = "col"), suffix = c("", "2")) %>% 
     filter(row != row2 | col != col2)
 }
 
-x %>% adjacent(x)
 ```
 
 
@@ -3753,8 +3749,274 @@ d9_mat <- d9 %>%
 # d9_mat %>%
 #   rayshader::ray_shade(d9_mat) %>%
 #   rayshader::plot_3d(d9_mat)
+
+input %>% grid_graph(x)
+
+input %>%
+  grid_graph(x) %>%
+  filter(value != 9) %>%
+  mutate(component = tidygraph::group_components()) %>%
+  as_tibble() %>%
+  count(component, sort = TRUE) %>%
+  head(3) %>%
+  summarize(answer = prod(n))
 ```
 
 ```{r d9-p1, echo = TRUE}
+low_points <- x %>% 
+  adjacent(x) %>% 
+  group_by(row, col) %>% 
+  summarize(low = all(value < value2)) %>% 
+  filter(low) %>% 
+  inner_join(x, by = c("row", "col")) %>% 
+  ungroup()
+
+low_points %>% 
+  summarize(sum(1 + value))
+
 
 ```
+
+Answer #1:
+**`r low_points %>% summarize(sum(1 + value))`** `r emo::ji("star")`
+
+## Puzzle #2
+
+```{r d9-p2, echo = TRUE}
+frontier <- low_points %>% 
+  mutate(basin = paste(row, col)) %>% 
+  select(basin, row, col, value)
+
+basins <- frontier
+
+while (nrow(frontier) > 0) {
+  frontier <- frontier %>% 
+    adjacent(x) %>% 
+    filter(value2 > value, value2 < 9) %>% 
+    select(basin, row = row2, col = col2, value = value2) %>% 
+    distinct(basin, row, col, .keep_all = TRUE) %>% 
+    anti_join(basins, by = c("row", "col"))
+  
+  basins <- bind_rows(basins, frontier)
+}
+
+basins %>% 
+  count(basin, sort = TRUE) %>% 
+  head(3) %>% 
+  summarize(prod(n))
+
+```
+
+Answer #2:
+**1048128** `r emo::ji("star")`
+
+# Day 10: Syntax Scoring
+
+## Puzzle #1
+
+```{r d10-data, echo = TRUE}
+# browseURL("https://pbs.twimg.com/media/FGRdRyWXIAUx3vw?format=jpg&name=large")
+
+input <- advent_input(10)
+
+d10 <- read_lines(here("data", "aoc", "d10.txt"))
+
+corruption_values <- c(")" = 3, "]" = 57, "}" = 1197, ">" = 25137)
+
+opening <- c("(", "[", "{", "<")
+closing <- c(")", "]", "}", ">")
+
+opening_matches <- opening
+names(opening_matches) <- closing
+
+is_match <- function(x, current) {
+  if (length(x) == 0) return(FALSE)
+  current %in% closing && tail(x, 1) == opening_matches[current]
+}
+
+is_corrupt <- function(x, current) {
+  if (length(x) == 0) return(FALSE)
+  current %in% closing && opening_matches[current] != tail(x, 1)
+}
+
+test <- input %>% slice(54)
+
+nchar(test)
+
+corruption_value <- function(line) {
+  chars <- line %>% str_split("") %>% .[[1]]
+  
+  x <- c()
+  next_char_idx <- 1
+  
+  while (next_char_idx <= length(chars) && !is_corrupt(x, chars[next_char_idx])) {
+    if (is_match(x, chars[next_char_idx])) {
+      x <- head(x, length(x) - 1)
+    } else {
+      x <- c(x, chars[next_char_idx])
+    }
+    
+    next_char_idx <- next_char_idx + 1
+  }
+  
+  if (!next_char_idx > length(chars)) {
+    value <- corruption_values[chars[next_char_idx]]
+  } else {
+    value <- 0
+  }
+  
+  return(value)
+}
+
+
+
+```
+
+Answer #1:
+**`r map_dbl(d10, corruption_value) %>% sum()`** `r emo::ji("star")`
+
+## Puzzle #2
+
+```{r d10-p2, echo = TRUE}
+completion_values <- c("(" = 1, "[" = 2, "{" = 3, "<" = 4)
+
+incomplete_lines <- keep(d10, .p = ~{corruption_value(.x) == 0})
+
+completion_value <- function(line) {
+  chars <- line %>% str_split("") %>% .[[1]]
+  
+  x <- c()
+  next_char_idx <- 1
+  
+  while (next_char_idx <= length(chars)) {
+    if (is_match(x, chars[next_char_idx])) {
+      x <- head(x, length(x) - 1)
+    } else {
+      x <- c(x, chars[next_char_idx])
+    }
+    
+    next_char_idx <- next_char_idx + 1
+  }
+  
+  reduce(rev(x), function(prev, current) {
+    return(prev * 5 + completion_values[current])
+  }, .init = 0)
+}
+
+
+```
+
+Answer #2:
+**`r map_dbl(incomplete_lines, completion_value) %>% median()`** `r emo::ji("star")`
+
+# Day 11: Dumbo Octopus
+
+## Puzzle #1
+
+```{r d11-p1, echo = TRUE}
+input <- advent_input(11)
+
+x <- input %>% grid_tidy(x)
+
+part1 <- 0
+
+adjacent_join <- function(x, y = x, diagonal = FALSE, suffix = c("", "2")) {
+  adj <- tibble(row_delta = c(-1, 1, 0, 0),
+                col_delta = c(0, 0, -1, 1))
+
+  if (diagonal) {
+    adj <- bind_rows(adj,
+                     tibble(row_delta = c(-1, -1, 1, 1),
+                            col_delta = c(-1, 1, -1, 1)))
+  }
+
+  x %>%
+    tidyr::crossing(adj) %>%
+    mutate(row2 = row + row_delta,
+           col2 = col + col_delta) %>%
+    inner_join(y, by = c(row2 = "row", col2 = "col"), suffix = suffix) %>%
+    filter(row != row2 | col != col2) %>%
+    select(-row_delta, -col_delta)
+}
+
+# x <- tibble::tribble(
+#                  ~x,
+#           5483143223,
+#           2745854711,
+#           5264556173,
+#           6141336146,
+#           6357385478,
+#           4167524645,
+#           2176841721,
+#           6882881134,
+#           4846848554,
+#           5283751526
+#           ) %>% grid_tidy(x)
+
+
+
+for (i in 1:100) {  # change 10 i in 1:1000 get answer for Puzzle #2
+  x <- x %>% 
+    mutate(value = value + 1,
+           flash = value > 9,
+           has_flashed = flash)
+  
+  while (any(x$flash)) {
+    part1 <- part1 + sum(x$flash)
+    x <- x %>% 
+      adjacent_join(diagonal = TRUE) %>% 
+      group_by(row, col, value, flash, has_flashed) %>% 
+      summarize(value = first(value) + sum(flash2),
+                .groups = "drop") %>% 
+      mutate(flash = value > 9 & !has_flashed) %>% 
+      mutate(has_flashed = flash | has_flashed)
+    
+    #Part 2
+    if (all(x$has_flashed | x$flash)) {
+      stop(paste0("All have flashed as of step ", i))
+    }
+  }
+  x <- x %>% 
+    mutate(value = ifelse(has_flashed, 0, value))
+}
+
+```
+
+Answer #1:
+**`r part1`** `r emo::ji("star")`
+
+## Puzzle #2
+
+```{r d11-p2, eval = FALSE}
+x <- input %>% grid_tidy(x)
+
+for (i in 1:1000) {
+  x <- x %>% 
+    mutate(value = value + 1,
+           flash = value > 9,
+           has_flashed = flash)
+  
+  while (any(x$flash)) {
+    part1 <- part1 + sum(x$flash)
+    x <- x %>% 
+      adjacent_join(diagonal = TRUE) %>% 
+      group_by(row, col, value, flash, has_flashed) %>% 
+      summarize(value = first(value) + sum(flash2),
+                .groups = "drop") %>% 
+      mutate(flash = value > 9 & !has_flashed) %>% 
+      mutate(has_flashed = flash | has_flashed)
+    
+    #Part 2
+    if (all(x$has_flashed | x$flash)) {
+      stop(paste0("All have flashed as of step ", i))
+    }
+  }
+  x <- x %>% 
+    mutate(value = ifelse(has_flashed, 0, value))
+}
+
+
+```
+
+Answer #2:
+**220** `r emo::ji("star")`
