--- a/r_Rmd/January 2022.Rmd
+++ b/r_Rmd/January 2022.Rmd
@@ -16,6 +16,11 @@ background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/
 
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
+
+pacman::p_load(janitor, rio, here, tidyverse, pacman)
+
+theme_set(theme_bw(base_size = 15)
+          + theme(legend.position = "bottom", legend.direction = "horizontal"))
 ```
 
 ???
@@ -38,33 +43,31 @@ class: inverse, left, top
 
 - Installed **xaringan**
 
---
 
 - Created new Rmd using *Ninja Presentation* Template
 
---
 
 - Changed background image
 
---
 
 - Changed slide class to "inverse" for black background.
 
---
 
 - Changed slide class to "left" and "top" to move list to top left.
 
 ---
 
-# Hello World
+# Day 2
 
-Install the **xaringan** package from [Github](https://github.com/yihui/xaringan):
+Plot Something!!
 
-```{r eval=FALSE, tidy=FALSE}
-remotes::install_github("yihui/xaringan")
+```{r include = TRUE, tidy = TRUE, out.width = '400px', fig.align = 'center'}
+mtcars %>% 
+  ggplot(aes(mpg, hp, fill = as.factor(cyl))) + 
+  geom_point(size = 6, shape = 21)
 ```
 
---
+---
 
 You are recommended to use the [RStudio IDE](https://www.rstudio.com/products/rstudio/), but you do not have to.
 
