--- a/r_Rmd/January 2022.Rmd
+++ b/r_Rmd/January 2022.Rmd
@@ -16,6 +16,17 @@ background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
 
+knitr::opts_chunk$set(
+  warning = FALSE,
+  message = FALSE,
+  echo = FALSE,
+  comment = '#', 
+  fig.retina = 3,
+#  fig.path = here::here("exports", "January 2022", "/"),
+  out.width = "100%"
+)
+
+
 pacman::p_load(janitor, rio, here, tidyverse, pacman, broom)
 
 theme_set(theme_bw(base_size = 15)
@@ -62,7 +73,7 @@ class: inverse, left, top
 
 
 
-```{r include = TRUE, tidy = TRUE, out.width = '400px', fig.align = 'center'}
+```{r include = TRUE, tidy = TRUE, out.width = '400px', fig.align = 'center', echo = TRUE}
 mtcars %>% 
   ggplot(aes(mpg, hp, fill = as.factor(cyl))) + 
   geom_point(size = 6, shape = 21)
@@ -73,7 +84,7 @@ mtcars %>%
 # Day 3: Plot Something Different and Highlight Added Code
 
 
-```{r include = TRUE, tidy = TRUE, out.width = '300px', fig.align = 'center'}
+```{r include = TRUE, tidy = TRUE, out.width = '300px', fig.align = 'center', echo = TRUE}
 mtcars %>% 
   ggplot(aes(mpg, hp, fill = as.factor(cyl))) + 
   geom_point(size = 6, shape = 21) + 
@@ -85,7 +96,7 @@ mtcars %>%
 # Day 4: Model Summary
 
 
-```{r model-summary, include = TRUE, comment = '#'}
+```{r model-summary, include = TRUE, comment = '#', echo = TRUE}
 fit <- lm(dist ~ speed, data = cars)
 tidy(fit)
 
@@ -122,7 +133,7 @@ bees <- tt_raw$colony
 ```
 
 .left-column[
-```{r tt-data, include = TRUE, warning = FALSE, message = FALSE}
+```{r tt-data, include = TRUE, echo = TRUE}
 
 ar_bees <- bees %>% 
   mutate(year = as.numeric(year)) %>% 
@@ -135,7 +146,7 @@ ar_bees <- bees %>%
 ]
 
 .right-column[
-```{r tt-plot, include = TRUE, echo = FALSE, warning = FALSE}
+```{r tt-plot, include = TRUE, echo = FALSE}
 ar_bees %>% 
   ggplot() + 
   geom_segment(aes(x = year, xend = year, yend = reno_pct_mean, y = lost_pct_mean)) + 
@@ -146,7 +157,8 @@ ar_bees %>%
   scale_y_continuous(labels = scales::percent_format()) + 
   labs(title = "Percentage of Arkansas Bee Colonies 
        <span style='color:#D50032FF;'>Lost</span> and
-       <span style='color:#418FDEFF;'>Renovated</span> Each Year.") +
+       <span style='color:#418FDEFF;'>Renovated</span> Each Year.", 
+       y = NULL) +
   theme(
     plot.title = element_markdown(lineheight = 1.1),
     legend.text = element_markdown(size = 11),
@@ -155,158 +167,41 @@ ar_bees %>%
   
 ```
 ]
----
-
-class: inverse, middle, center
-
-# Using xaringan
 
 ---
 
-# xaringan
+# Day 7: DT Tables
 
-Provides an R Markdown output format `xaringan::moon_reader` as a wrapper for remark.js, and you can use it in the YAML metadata, e.g.
+```{r DT-tables, include = TRUE}
+p_load(DT, palmerpenguins)
 
-```yaml
----
-title: "A Cool Presentation"
-output:
-  xaringan::moon_reader:
-    yolo: true
-    nature:
-      autoplay: 30000
----
-```
 
-See the help page `?xaringan::moon_reader` for all possible options that you can use.
-
----
-
-# remark.js vs xaringan
-
-Some differences between using remark.js (left) and using **xaringan** (right):
-
-.pull-left[
-1. Start with a boilerplate HTML file;
-
-1. Plain Markdown;
-
-1. Write JavaScript to autoplay slides;
-
-1. Manually configure MathJax;
-
-1. Highlight code with `*`;
-
-1. Edit Markdown source and refresh browser to see updated slides;
-]
-
-.pull-right[
-1. Start with an R Markdown document;
-
-1. R Markdown (can embed R/other code chunks);
-
-1. Provide an option `autoplay`;
-
-1. MathJax just works;<sup>*</sup>
-
-1. Highlight code with `{{}}`;
-
-1. The RStudio addin "Infinite Moon Reader" automatically refreshes slides on changes;
-]
-
-.footnote[[*] Not really. See next page.]
-
----
-
-# Math Expressions
-
-You can write LaTeX math expressions inside a pair of dollar signs, e.g. &#36;\alpha+\beta$ renders $\alpha+\beta$. You can use the display style with double dollar signs:
-
-```
-$$\bar{X}=\frac{1}{n}\sum_{i=1}^nX_i$$
-```
-
-$$\bar{X}=\frac{1}{n}\sum_{i=1}^nX_i$$
-
-Limitations:
-
-1. The source code of a LaTeX math expression must be in one line, unless it is inside a pair of double dollar signs, in which case the starting `$$` must appear in the very beginning of a line, followed immediately by a non-space character, and the ending `$$` must be at the end of a line, led by a non-space character;
-
-1. There should not be spaces after the opening `$` or before the closing `$`.
-
-1. Math does not work on the title slide (see [#61](https://github.com/yihui/xaringan/issues/61) for a workaround).
-
----
-
-# R Code
-
-```{r comment='#'}
-# a boring regression
-fit = lm(dist ~ 1 + speed, data = cars)
-coef(summary(fit))
-dojutsu = c('地爆天星', '天照', '加具土命', '神威', '須佐能乎', '無限月読')
-grep('天', dojutsu, value = TRUE)
-```
-
----
-
-# R Plots
-
-```{r cars, fig.height=4, dev='svg'}
-par(mar = c(4, 4, 1, .1))
-plot(cars, pch = 19, col = 'darkgray', las = 1)
-abline(fit, lwd = 2)
-```
-
----
-
-# Tables
-
-If you want to generate a table, make sure it is in the HTML format (instead of Markdown or other formats), e.g.,
-
-```{r}
-knitr::kable(head(iris), format = 'html')
-```
-
----
-
-# HTML Widgets
-
-I have not thoroughly tested HTML widgets against **xaringan**. Some may work well, and some may not. It is a little tricky.
-
-Similarly, the Shiny mode (`runtime: shiny`) does not work. I might get these issues fixed in the future, but these are not of high priority to me. I never turn my presentation into a Shiny app. When I need to demonstrate more complicated examples, I just launch them separately. It is convenient to share slides with other people when they are plain HTML/JS applications.
-
-See the next page for two HTML widgets.
-
----
-
-```{r out.width='100%', fig.height=6, eval=require('leaflet')}
-library(leaflet)
-leaflet() %>% addTiles() %>% setView(-93.65, 42.0285, zoom = 17)
-```
-
----
-
-```{r eval=require('DT'), tidy=FALSE}
 DT::datatable(
-  head(iris, 10),
-  fillContainer = FALSE, options = list(pageLength = 8)
+  sample_n(palmerpenguins::penguins, 30),
+  fillContainer = TRUE, 
+  options = list(pageLength = 10, scrollY = TRUE)
 )
+
 ```
 
----
 
-# Some Tips
-
-- Do not forget to try the `yolo` option of `xaringan::moon_reader`.
-
-    ```yaml
-    output:
-      xaringan::moon_reader:
-        yolo: true
-    ```
 
 ---
+
+# This is a test
+
+```{r r-test, include = TRUE, echo = TRUE}
+penguins %>% 
+  group_by(island, species, sex, year) %>% 
+  summarize(across(.cols = everything(), 
+                   c(mean = mean, sd = sd))) %>% 
+  ungroup() %>% 
+  select(island, species, sex, year, 
+         bill_length_mm_mean, bill_length_mm_sd) %>% 
+  filter(sex == "female", 
+         year %in% c(2008, 2009))
+
+```
 
 # Some Tips
 
